# nb-capt

./: .gitignore  main.py  pyproject.toml  summary.py  test.ipynb  transcribe.py
.agents/rules/: restructure-repo.md
src/: apr.py  data_collector_ctc_with_padding.py  eval_pst_dataset.ipynb  generate_pst_dataset.py  generate_scores.py  parse_transcription.py  pprm.py  predict.py  prepare_dataset.py  pst_dataset.py  scorer_dataset.py  siamese_scorer.py  token_count.py  train.py  train_apr.py
tmp/: vocab.json
tmp/wav2vec2-300m-phoneme-ctc/runs/May12_21-26-59_stoki/: events.out.tfevents.1778621219.stoki.43240.0
tmp/wav2vec2-300m-phoneme-ctc/runs/May12_21-30-58_stoki/: events.out.tfevents.1778621458.stoki.44006.0
