[project]
name = "mycapt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "datasets>=2.19.1",
    "evaluate>=0.4.6",
    "ipykernel>=7.2.0",
    "jiwer>=4.0.0",
    "kenlm",
    "librosa>=0.11.0",
    "phonecodes>=2.0.0",
    "pyctcdecode>=0.5.0",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.20.1",
    "transformers==4.47.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"

[tool.uv.sources]
kenlm = { url = "https://github.com/kpu/kenlm/archive/master.zip" }
